force-app/main/default/objects/Medical_Education_Training_Tracker__c/Medical_Education_Training_Tracker__c.object-meta.xml
<CustomObject>
    <label>Medical Education Training Tracker</label>
    <nameField>
        <displayFormat>MEDED-{0000000}</displayFormat>
        <label>Medical Education Training Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Education Training Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>