force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Date</label>
    <type>Checkbox</type>
</CustomField>