force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/CVENT_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CVENT_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CVENT Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Medical Education Training Trackers</relationshipLabel>
    <relationshipName>Medical_Education_Training_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>