force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Expected_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendee__c</fullName>
    <label>Expected Attendee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>