force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Facility_Lab__c.field-meta.xml
<CustomField>
    <fullName>Facility_Lab__c</fullName>
    <label>Facility / Lab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scottsdale Lab</fullName>
            </value>
            <value>
                <fullName>Parsippany Lab</fullName>
            </value>
            <value>
                <fullName>Mobile Lab</fullName>
            </value>
            <value>
                <fullName>On-site Lab</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Other ZB Lab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>