force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/HCP_Lead__c.field-meta.xml
<CustomField>
    <fullName>HCP_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCP Lead</label>
    <type>Checkbox</type>
</CustomField>