force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/HCP_Name__c.field-meta.xml
<CustomField>
    <fullName>HCP_Name__c</fullName>
    <label>HCP Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Miller</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Cafferky</fullName>
            </value>
            <value>
                <fullName>Klein</fullName>
            </value>
            <value>
                <fullName>Levine</fullName>
            </value>
            <value>
                <fullName>Foran</fullName>
            </value>
            <value>
                <fullName>Ogden</fullName>
            </value>
            <value>
                <fullName>Cannova</fullName>
            </value>
            <value>
                <fullName>Sekundiak</fullName>
            </value>
            <value>
                <fullName>Tanous</fullName>
            </value>
            <value>
                <fullName>Toulson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>