force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiation Date</label>
    <type>Date</type>
</CustomField>