force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Knee_Instr_Available__c.field-meta.xml
<CustomField>
    <fullName>Knee_Instr_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knee Instr Available</label>
    <type>Checkbox</type>
</CustomField>