force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Other_Facility_Lab__c.field-meta.xml
<CustomField>
    <fullName>Other_Facility_Lab__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Facility/Lab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>