force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Other_HCP_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_HCP_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other HCP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>