force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Req_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Req_Event_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Req Event Date</label>
    <type>Date</type>
</CustomField>