force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Medical_Education_Training_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>