force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Robot_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Robot_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Robot Confirmed</label>
    <type>Checkbox</type>
</CustomField>