force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Robot_for_Training__c.field-meta.xml
<CustomField>
    <fullName>Robot_for_Training__c</fullName>
    <label>Robot for Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZB - Yes</fullName>
            </value>
            <value>
                <fullName>Facility Owned</fullName>
            </value>
            <value>
                <fullName>Mobile Lab</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>