force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Specimen__c.field-meta.xml
<CustomField>
    <fullName>Specimen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specimen</label>
    <type>Checkbox</type>
</CustomField>