force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Specimen_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Specimen_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specimen Confirmed</label>
    <type>Checkbox</type>
</CustomField>