force-app/main/default/objects/Medical_Education_Training_Tracker__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>