force-app/main/default/objects/Medical_Education_Training_Tracker__c/validationRules/Campaign_ID_required_to_complete_event.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_ID_required_to_complete_event</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(CVENT_Campaign__c )  &amp;&amp;  Training_Completed__c = TRUE</errorConditionFormula>
    <errorMessage>Please add CVENT campaign before completing the Event</errorMessage>
</ValidationRule>